test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:29:5: Unsupported: void (for tagged unions)
   29 |     void Invalid;
      |     ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:36:5: Unsupported: void (for tagged unions)
   36 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:57:5: Unsupported: void (for tagged unions)
   57 |     void           Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:79:5: Unsupported: void (for tagged unions)
   79 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:85:5: Unsupported: void (for tagged unions)
   85 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:94:5: Unsupported: void (for tagged unions)
   94 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:101:5: Unsupported: void (for tagged unions)
  101 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:107:5: Unsupported: void (for tagged unions)
  107 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:116:5: Unsupported: void (for tagged unions)
  116 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:137:11: Unsupported: tagged union
  137 |     vi1 = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:138:11: Unsupported: tagged union
  138 |     vi2 = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:141:11: Unsupported: tagged union
  141 |     vi1 = tagged Valid (42);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:144:11: Unsupported: tagged union
  144 |     vi2 = tagged Valid (23 + 34);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:148:10: Unsupported: tagged union
  148 |     mt = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:150:10: Unsupported: tagged union
  150 |     mt = tagged IntVal (32'h12345678);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:153:10: Unsupported: tagged union
  153 |     mt = tagged ShortVal (16'hABCD);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:156:10: Unsupported: tagged union
  156 |     mt = tagged ByteVal (8'h5A);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:159:10: Unsupported: tagged union
  159 |     mt = tagged BitVal (1'b1);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:163:10: Unsupported: tagged union
  163 |     mt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:166:10: Unsupported: tagged union
  166 |     mt = tagged Word16NonZeroLSB (16'h1234);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:170:10: Unsupported: tagged union
  170 |     mt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:173:10: Unsupported: tagged union
  173 |     mt = tagged Word16LittleEndian (16'hCAFE);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:177:10: Unsupported: tagged union
  177 |     mt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:180:10: Unsupported: tagged union
  180 |     mt = tagged Wide60NonZeroLSB (60'h123456789ABCDEF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:183:10: Unsupported: tagged union
  183 |     mt = tagged Wide60LittleEndian (60'hABCDEF012345678);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:187:10: Unsupported: tagged union
  187 |     mt = tagged Wide90 (90'hFF_FFFFFFFF_FFFFFFFF_FFFF);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:190:10: Unsupported: tagged union
  190 |     mt = tagged Wide90NonZeroLSB (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:193:10: Unsupported: tagged union
  193 |     mt = tagged Wide90LittleEndian (90'h11_11111122_22222233_3333);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:197:10: Unsupported: tagged union
  197 |     at = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:199:10: Unsupported: tagged union
  199 |     at = tagged Scalar (999);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:202:10: Unsupported: tagged union
  202 |     at = tagged UnpackedArr '{100, 200, 300, 400};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:208:10: Unsupported: tagged union
  208 |     at = tagged UnpackedArr2D '{'{32'hA, 32'hB, 32'hC}, '{32'hD, 32'hE, 32'hF}};
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:217:13: Unsupported: tagged union
  217 |     instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:223:13: Unsupported: tagged union
  223 |     instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:229:13: Unsupported: tagged union
  229 |     instr = tagged Jmp (tagged JmpU 10'd512);
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:229:25: Unsupported: tagged union
  229 |     instr = tagged Jmp (tagged JmpU 10'd512);
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:233:13: Unsupported: tagged union
  233 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:233:25: Unsupported: tagged union
  233 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:238:13: Unsupported: tagged union
  238 |     instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:238:25: Unsupported: tagged union
  238 |     instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |                         ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:243:11: Unsupported: tagged union
  243 |     cht = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:244:11: Unsupported: tagged union
  244 |     cht = tagged Handle (null);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:248:11: Unsupported: tagged union
  248 |     clt = tagged Invalid;
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:249:11: Unsupported: tagged union
  249 |     clt = tagged Obj (obj);
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:253:10: Unsupported: tagged union
  253 |     rt = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:254:10: Unsupported: tagged union
  254 |     rt = tagged RealVal (3.14159);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:258:10: Unsupported: tagged union
  258 |     rt = tagged ShortRealVal (2.5);
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:262:10: Unsupported: tagged union
  262 |     st = tagged Invalid;
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:263:10: Unsupported: tagged union
  263 |     st = tagged StrVal ("hello");
      |          ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:267:10: Unsupported: tagged union
  267 |     et = tagged Invalid;
      |          ^~~~~~
%Error: Exiting due to
